@@ -1,4 +1,7 @@
 2011-09-21 gabriel.oliveira
+* Dynamize UNG width and height layout
+
+2011-09-21 gabriel.oliveira
 * Add method to display dynamic 'loading' information
 
 2011-09-21 gabriel.oliveira
